Work on the functionality and appearance of the interface

--- a/ToDoList.WebUi/App.razor
+++ b/ToDoList.WebUi/App.razor
@@ -10,3 +10,11 @@
         </LayoutView>
     </NotFound>
 </Router>
+@code {
+    [Inject] NavigationManager NavigationManager { get; set; }
+
+    protected override void OnInitialized()
+    {
+        NavigationManager.NavigateTo("/to-do-list"); 
+    }
+}
