--- a/ToDoList.WebUi/Shared/MainLayout.razor
+++ b/ToDoList.WebUi/Shared/MainLayout.razor
@@ -1,5 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
+<BlazoredToasts Position="Blazored.Toast.Configuration.ToastPosition.BottomCenter"
+                Timeout="8"
+                ShowProgressBar="@true"
+                ShowCloseButton="@true"
+                MaxToastCount="3">
+</BlazoredToasts>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
