--- a/ToDoList.WebUi/Shared/NavMenu.razor
+++ b/ToDoList.WebUi/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">ToDoList.WebUi</a>
+        <a class="navbar-brand" href="">Menu</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,7 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="to-do-list">
-                <span class="oi oi-plus" aria-hidden="true"></span> To-do List
+                <span class="oi oi-pencil" aria-hidden="true"></span> To-do List
             </NavLink>
         </div>
       
